Google Fit Additions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# API Keys
+config.py
+
+# Files and Folders exclusion
+Fit
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
